// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strategy-stack-app > matches the expected gateway stack template 1`] = `
{
  "Outputs": {
    "StrategyStackAppapiEndpoint2784A504": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "StrategyStackAppapi0B0977AD",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "StrategyStackAppapiDeploymentStageprod77FD11AC",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StrategyStackAppapi0B0977AD": {
      "Properties": {
        "Description": "API routed by stack strategy",
        "Name": "StrategyApi",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "StrategyStackAppapiAccount4B2A0FF8": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "StrategyStackAppapi0B0977AD",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "StrategyStackAppapiCloudWatchRoleD8797C18",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "StrategyStackAppapiCloudWatchRoleD8797C18": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "StrategyStackAppapiDeploymentEDA326D01f5119f065bc5a22d9e33d696f9835d1": {
      "DependsOn": [
        "StrategyStackAppapiGETDB4640B5",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "API routed by stack strategy",
        "RestApiId": {
          "Ref": "StrategyStackAppapi0B0977AD",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "StrategyStackAppapiDeploymentStageprod77FD11AC": {
      "DependsOn": [
        "StrategyStackAppapiAccount4B2A0FF8",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "StrategyStackAppapiDeploymentEDA326D01f5119f065bc5a22d9e33d696f9835d1",
        },
        "RestApiId": {
          "Ref": "StrategyStackAppapi0B0977AD",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "StrategyStackAppapiGETApiPermissionStrategyStackAppgatewayStrategyStackAppapiEEF35F1BGET84244501": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::ImportValue": "StrategyStackApp-service:ExportsOutputFnGetAttStrategyStackApphandler192EDDB3Arn881CBD1D",
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "StrategyStackAppapi0B0977AD",
              },
              "/",
              {
                "Ref": "StrategyStackAppapiDeploymentStageprod77FD11AC",
              },
              "/GET/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "StrategyStackAppapiGETApiPermissionTestStrategyStackAppgatewayStrategyStackAppapiEEF35F1BGET6089B6B7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::ImportValue": "StrategyStackApp-service:ExportsOutputFnGetAttStrategyStackApphandler192EDDB3Arn881CBD1D",
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "StrategyStackAppapi0B0977AD",
              },
              "/test-invoke-stage/GET/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "StrategyStackAppapiGETDB4640B5": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::ImportValue": "StrategyStackApp-service:ExportsOutputFnGetAttStrategyStackApphandler192EDDB3Arn881CBD1D",
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "StrategyStackAppapi0B0977AD",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "StrategyStackAppapi0B0977AD",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`strategy-stack-app > matches the expected service stack template 1`] = `
{
  "Outputs": {
    "ExportsOutputFnGetAttStrategyStackApphandler192EDDB3Arn881CBD1D": {
      "Export": {
        "Name": "StrategyStackApp-service:ExportsOutputFnGetAttStrategyStackApphandler192EDDB3Arn881CBD1D",
      },
      "Value": {
        "Fn::GetAtt": [
          "StrategyStackApphandler192EDDB3",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "StrategyStackApphandler192EDDB3": {
      "DependsOn": [
        "StrategyStackApphandlerServiceRole02BF32F5",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "exports.handler = async () => ({ statusCode: 200, body: "Hello" })",
        },
        "Description": "Request handler",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "StrategyStackApphandlerServiceRole02BF32F5",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "StrategyStackApphandlerServiceRole02BF32F5": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
